--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+body {
+  background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding-top: 50px;
+}
+
+h1 {
+  color: #333;
+  font-size: 2.5em;
+}
+
+p {
+  color: #666;
+  font-size: 1.2em;
+}
+
+
+
 * {
   margin: 0;
   padding: 0;
