--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ a:hover {
 }
 
 img {
-  max-width: 100%;
+  display: block;
+  margin: 0 auto 30px auto;
+  max-width: 300px;
   height: auto;
-  margin-bottom: 30px;
 }
+
 
