--- a/style.css
+++ b/style.css
@@ -1,38 +1,1 @@
-
-
-body {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  padding: 50px;
-  background-color: #fefefe;
-  color: #222;
-}
-
-h1 {
-  font-size: 2.5em;
-  margin-bottom: 0.3em;
-}
-
-p {
-  font-size: 1.2em;
-  margin-top: 0;
-}
-
-a {
-  color: #0066cc;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-img {
-  display: block;
-  margin: 0 auto 30px auto;
-  max-width: 300px;
-  height: auto;
-}
-
-
+body { font-family: Arial; background: #fafafa; }
